--- a/src/blocks/navigation/__overlay/navigation__overlay.css
+++ b/src/blocks/navigation/__overlay/navigation__overlay.css
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 200vw;
     height: 200vh;
     background-color: rgba(0, 0, 0, .3);
     z-index: 2;
